unpackaged/main/default/objects/SFDC_Job_Candidate__c/SFDC_Job_Candidate__c.object-meta.xml
<CustomObject>
    <description>Link Object</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JID{000000}</displayFormat>
        <label>Job Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>