unpackaged/main/default/objects/SFDC_Job_Candidate__c/fields/SFDC_Candidate__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>SFDC_Candidate__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>R00N30000001WXBxEAO</relationshipName>
    <type>Lookup</type>
</CustomField>