unpackaged/main/default/objects/SFDC_Job_Candidate__c/fields/SFDC_Job__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Job__c</fullName>
    <label>Job</label>
    <referenceTo>SFDC_Job__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>R00N30000001WXBwEAO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>