unpackaged/main/default/objects/SFDC_Job_Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(SFDC_Candidate__r.Application_Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>