unpackaged/main/default/objects/SFDC_Job_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFDC_Candidate__c</columns>
    <columns>SFDC_Job__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>